bk_ida/gccida/c2/distribute_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12553:4: error: expected ';' after expression
rtx v13; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12553:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // rcx 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12552:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12554:4: error: expected ';' after expression
rtx v14; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12554:5: error: use of undeclared identifier 'v14'; did you mean 'v12'?
rtx v14; // r14 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12552:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12555:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12555:5: error: use of undeclared identifier 'v15'; did you mean 'v12'?
rtx v15; // rbx 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12552:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12562:4: error: expected ';' after expression
rtx reg_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12562:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r15 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12563:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12563:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // rax 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12566:4: error: expected ';' after expression
rtx v26; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12566:5: error: use of undeclared identifier 'v26'
rtx v26; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12567:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12567:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12571:4: error: expected ';' after expression
rtx v31; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12571:5: error: use of undeclared identifier 'v31'
rtx v31; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12574:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12574:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/combine.c:12578:4: error: expected ';' after expression
rtx v38; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_notes/src/obj/combine.o] Error 1
